--- a/templates/bookings/confirm.html
+++ b/templates/bookings/confirm.html
@@ -98,11 +98,8 @@
             <div class="important-notice">
                 <h3>重要なお知らせ</h3>
                 <ul>
-                    <li>ご予約は仮申込みとなります。スタッフが確認後、確定のご連絡をいたします</li>
-                    <li>確認メールをお送りしますので、必ずご確認ください</li>
-                    <li>当店は完全予約制です。ご予約時間の5分前にお越しください</li>
-                    <li>10分以上の遅刻をされた場合、足湯サービスができない場合があります</li>
-                    <li>当日キャンセル・無断キャンセルはキャンセル料が発生する場合があります</li>
+                    <li>ご予約はまだ確定ではありません。スタッフが確認後、予約確定のご連絡をいたします</li>
+                    <li>当日キャンセルはキャンセル料100%発生します</li>
                 </ul>
             </div>
 
