--- a/templates/bookings/step3_customer.html
+++ b/templates/bookings/step3_customer.html
@@ -137,19 +137,16 @@
                         <div class="terms-content">
                             <p><strong>※ご来店に際しての下記に当てはまる方は施術出来ません。</strong></p>
                             <ul class="prohibition-list">
-                                <li>◆性的な行為をする方</li>
-                                <li>◆風俗的サービスを要求する方</li>
+                                <li>◆性的な行為をする方・風俗的サービスを要求する方</li>
                                 <li>◆重度の水虫感染症、皮膚感染症をお持ちの方</li>
                                 <li>◆妊娠中の方</li>
                                 <li>◆泥酔している方</li>
                                 <li>◆発熱や咳など症状があり体調が悪い方</li>
                             </ul>
                             
-                            <p><strong>※当日キャンセルを何度かする方や無連絡で来ない方はキャンセル料が発生します。<br>
-                            また次回からのご来店をお断りしております。</strong></p>
+                            <p><strong>※当日キャンセルはキャンセル料が100%発生します。</strong></p>
                             
-                            <p><strong>※ 待合室がない為ご予約の時間より5分以上前の<br>
-                            ご来店はご遠慮下さい。</strong></p>
+                            
                         </div>
                         
                         <div class="form-group">
